traces/bug_537.txt
examples++-load/medit.cpp:577: error: DEAD_STORE
  The value written to &mps (type Fem2D::MeshPoint*) is never used.
Showing all 1 steps of the trace


examples++-load/medit.cpp:577:46: Write of unused value
575.   AnyType datasolMesh3_Op<v_fes>::operator()(Stack stack)  const 
576.   { 
577.     MeshPoint *mp(MeshPointStack(stack)) , mps=*mp;
                                                    ^
578.     Mesh3 * pTh= GetAny<Mesh3 *>((*eTh)(stack));
579.     string * ffname= GetAny<string *>( (*filename)(stack) );
